# nye.countdown

./: .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  build-push.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  index.html  justfile  manifest.json  sw.js
.github/workflows/: docker.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  connection_manager.py  geolocation.py  main.py  ntp_sync.py
backend/app/models/: __init__.py  greeting.py  reaction.py  rpc.py
backend/app/services/: __init__.py  greeting.py  reaction.py  rpc.py  time_sync.py
backend/tests/: __init__.py  test_rpc_service.py  test_time_sync.py  test_websocket_rpc.py
frontend/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.routes.ts  app.ts
frontend/src/app/components/countdown/: countdown.html  countdown.scss  countdown.ts
frontend/src/app/components/qr-code/: qr-code.ts
frontend/src/app/components/reaction-overlay/: reaction-overlay.ts
frontend/src/app/components/remote/: remote.html  remote.scss  remote.ts
frontend/src/app/effects/: base-effect.ts  disco.effect.ts  emoji-burst.effect.ts  firework.effect.ts
frontend/src/app/services/: analytics.service.ts  config.service.ts  effect-engine.service.ts  greeting.service.ts  reaction.service.ts  time-sync.service.ts  websocket.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
